[package]
name = "type-forge"
version = "0.1.1"
edition = "2024"
authors = ["SirCesarium"]
description = "A fast CLI tool to transform JSON, YAML, TOML, and XML into type-safe code for Rust, TypeScript, and more."
license = "MIT"
repository = "https://github.com/SirCesarium/type-forge"
readme = "README.md"
keywords = [
  "codegen",
  "json-to-rust",
  "schema-generator",
  "serialization",
  "cli",
]
categories = ["command-line-utilities", "development-tools", "parsing"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
java-properties = "2.0.0"
json_typegen_shared = { version = "0.7.0", default-features = false }
quick-xml = { version = "0.40.1", features = ["serialize"] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "blocking",
  "rustls",
  "charset",
  "http2",
] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.1.2"
