[package]
name = "tyg"
version = "1.0.0"
edition = "2024"
authors = ["SirCesarium"]
description = "Generate types from several data sources to multiple languages"
license = "MIT"
repository = "https://github.com/SirCesarium/type-forge"
readme = "README.md"
keywords = [
  "codegen",
  "json-to-rust",
  "schema-generator",
  "serialization",
  "cli",
]
categories = ["command-line-utilities", "development-tools", "parsing"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
java-properties = "2.0.0"
json_typegen_shared = { version = "0.7.0", default-features = false }
miette = { version = "7.6.0", features = ["fancy"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "blocking",
  "native-tls",
  "charset",
  "http2",
] }
serde-saphyr = "0.0.27"
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
absolute_paths = "deny"
